--- a/turnos.html
+++ b/turnos.html
@@ -208,13 +208,13 @@
                     <span>${turno.nombre} (${turno.inicio} - ${turno.fin})</span>
                     <select class="preferencia" onchange="actualizarPreferencia(${turno.id}, this.value)">
                         <option value="">Preferencia</option>
-                        ${medicos.map(m => `<option value="medico:${m.id}">${m.nombre}</option>`).join('')}
-                        ${subespecialidades.map(s => `<option value="sub:${s}">${s}</option>`).join('')}
+                        ${medicos.map(m => `<option value="medico:${m.id}" ${turno.preferencia === `medico:${m.id}` ? 'selected' : ''}>${m.nombre}</option>`).join('')}
+                        ${subespecialidades.map(s => `<option value="sub:${s}" ${turno.preferencia === `sub:${s}` ? 'selected' : ''}>${s}</option>`).join('')}
                     </select>
                     <select class="solo" onchange="actualizarSolo(${turno.id}, this.value)">
                         <option value="">Solo</option>
-                        ${medicos.map(m => `<option value="medico:${m.id}">${m.nombre}</option>`).join('')}
-                        ${subespecialidades.map(s => `<option value="sub:${s}">${s}</option>`).join('')}
+                        ${medicos.map(m => `<option value="medico:${m.id}" ${turno.solo === `medico:${m.id}` ? 'selected' : ''}>${m.nombre}</option>`).join('')}
+                        ${subespecialidades.map(s => `<option value="sub:${s}" ${turno.solo === `sub:${s}` ? 'selected' : ''}>${s}</option>`).join('')}
                     </select>
                     <span class="eliminar-turno" onclick="eliminarTurnoCreado(${turno.id})">❌</span>
                 `;
