--- a/generar-planning.html
+++ b/generar-planning.html
@@ -393,13 +393,20 @@
         }
 
         window.onload = function() {
-            cargarMedicosYSubespecialidades();
-            cargarFestivos();
+            cargarDatos();
             const currentDate = new Date();
             const currentWeek = getWeekNumber(currentDate);
             document.getElementById('semana').value = `${currentDate.getFullYear()}-W${currentWeek.toString().padStart(2, '0')}`;
             mostrarCalendarioSemanal();
         };
+
+        function getWeekNumber(d) {
+            d = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
+            d.setUTCDate(d.getUTCDate() + 4 - (d.getUTCDay()||7));
+            var yearStart = new Date(Date.UTC(d.getUTCFullYear(),0,1));
+            var weekNo = Math.ceil(( ( (d - yearStart) / 86400000) + 1)/7);
+            return weekNo;
+        }
     </script>
 </body>
 </html>
